Fix the path to certain ICU .lib files.
Patch by: me

--- a/main/icu/createmak.cfg
+++ b/main/icu/createmak.cfg
@@ -296,8 +296,8 @@ LINK32_FLAGS=kernel32.lib ..\..\..\lib\icuin.lib $(COMMONLINKFLAGS_DLL) /NODEFAU
 
 [AdditionalLinkObjects_layoutex]
 	"..\..\lib\icuuc.lib" \
-	"..\..\icuin.lib" \
-	"..\..\icule.lib"
+	"..\..\lib\icuin.lib" \
+	"..\..\lib\icule.lib"
 
 [AdditionalLinkObjects_test_cintltst]
 	"..\..\..\lib\icuuc.lib" \
