Standardize the pre-commit config (#253)
https://github.com/codespell-project/codespell?tab=readme-ov-file#pre-commit-hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,6 @@ repos:
     hooks:
       - id: codespell
         name: run codespell
-        description: Check spelling with codespell
-        entry: codespell --ignore-words=codespell.txt
+        description: check spelling with codespell
+        args: [--ignore-words=.github/linters/codespell.txt]
         exclude: ^extras/
